--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <li><a href="#school-locations" class="nav-link">高校所在地</a></li>
                 <li><a href="#application-flow" class="nav-link">出願の流れ</a></li>
                 <li><a href="#schedule" class="nav-link">入試日程</a></li>
-                <li><a href="#itsuki-moshi" class="nav-link">五ツ木模試</a></li> <!-- Updated label -->
+                <li><a href="#itsuki-moshi" class="nav-link">五ツ木模試</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
             </ul>
         </nav>
@@ -179,7 +179,7 @@
                         <p class="mb-4">グラフが示す通り、中学1・2年生の評定に対し、中学3年生の評定は<strong class="text-[#0077B6] text-xl">3倍</strong>の重みで計算されます。この中3重視のルールは、生徒に最後まで努力し続けることの重要性を伝える強力な根拠となります。</p>
                         <ul class="list-disc list-inside space-y-2">
                             <li><strong class="text-[#03045E]">指導の核心:</strong> 中3の定期テスト対策、提出物の徹底、授業態度が合否に直結することを伝えましょう。</li>
-                            <li><strong class="text-[#03045E]">モチベーション向上:</strong> 中3からでも逆転は可能という前向きなメッセージで生徒を鼓舞できます。</li>
+                            <li><strong class="text-[#03045E]">モチベーション向上:</b> 中3からでも逆転は可能という前向きなメッセージで生徒を鼓舞できます。</li>
                         </ul>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                     <div class="text-center text-3xl text-[#0077B6]">▼</div>
                     <div class="p-4 bg-gray-50 rounded-lg shadow-sm">
                         <h3 class="font-bold text-lg text-[#03045E] mb-2">4. 最終的な内申点の調整（450点満点）</h3>
-                        <p class="math-text">合否判定に用いられる際、内申点は学力検査の満点（5教科 $\times$ 90点 = 450点）に合わせる形で調整されます。これにより、内申点の最終的な満点も学力検査と同じ **450点** となります。</p>
+                        <p class="math-text">合否判定に用いられる際、内申点は学力検査の満点（5教科 $\times$ 90点 = 450点）に合わせる形で調整されます。これにより、内申点の最終的な満点も学力検査と同じ 450点 となります。</p>
                         <p class="math-text mt-2 font-semibold">最終内申点満点: 450点</p>
                     </div>
                     <div class="text-center text-3xl text-[#0077B6]">▼</div>
@@ -354,7 +354,7 @@
                                 <td class="p-3">54</td>
                             </tr>
                             <tr class="hover:bg-gray-50">
-                                <td class="p-3">芥川</td>
+                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">芥川</td>
                                 <td class="p-3">B</td>
                                 <td class="p-3">B</td>
                                 <td class="p-3">B</td>
@@ -827,7 +827,7 @@
                              <p class="text-sm mt-1">高槻からアクセスしやすく、多様なコースを持つ共学校です。特に「吹奏楽部」が有名で、全国レベルの活動を行っています。</p>
                              <ul class="list-disc list-inside text-sm ml-4 mt-2">
                                  <li><strong class="font-semibold">国公立難関コース:</strong> 難関国公立大学を目指すコース。<strong class="font-semibold">(偏差値: 65-66)</strong></li>
-                                 <li><strong class="font-semibold">特別進学コース:</strong> 関関同立など有名私立大学を目指すコース.<strong class="font-semibold">(偏差値: 56)</strong></li>
+                                 <li><strong class="font-semibold">特別進学コース:</b> 関関同立など有名私立大学を目指すコース.<strong class="font-semibold">(偏差値: 56)</strong></li>
                                  <li><strong class="font-semibold">総合進学コース:</b> 多様な進路に対応し、基礎学力を固めるコース。<strong class="font-semibold">(偏差値: 50-51)</strong></li>
                              </ul>
                          </div>
@@ -1042,22 +1042,22 @@
             </div>
         </section>
 
-        <!-- 五ツ木模試の概要とスケジュールセクション (Updated section title) -->
+        <!-- 五ツ木模試の概要とスケジュールセクション -->
         <section id="itsuki-moshi" class="mb-12 scroll-mt-[6.5rem]">
             <div class="card p-6 md:p-8">
-                <h2 class="text-2xl font-bold section-title pb-2 mb-4">五ツ木模試の概要とスケジュール</h2> <!-- Updated text -->
+                <h2 class="text-2xl font-bold section-title pb-2 mb-4">五ツ木模試の概要とスケジュール</h2>
                 <p class="text-base md:text-lg mb-6">五ツ木模試（五ツ木書房主催の「五ツ木・駸々堂中学・高校進学模擬テスト会」）は、大阪府下で最も多くの受験生が参加する公開模擬テストです。志望校の合格可能性判定に用いられ、受験生の学力状況を把握する上で非常に重要な指標となります。複数回実施されるため、定期的に受験して学力の推移を確認し、進路指導に役立てましょう。</p>
                 
-                <h3 class="text-xl font-bold text-[#03045E] mb-3 mt-6">五ツ木模試のポイント</h3> <!-- Updated text -->
+                <h3 class="text-xl font-bold text-[#03045E] mb-3 mt-6">五ツ木模試のポイント</h3>
                 <ul class="list-disc list-inside text-base space-y-2 mb-6">
                     <li><strong class="font-semibold text-[#0077B6]">受験者数の多さ:</strong> 府内最大の規模を誇り、信頼性の高いデータが得られます。</li>
                     <li><strong class="font-semibold text-[#0077B6]">志望校判定:</strong> 詳細なデータに基づいた合格可能性判定は、志望校選びの強力な参考になります。</li>
-                    <li><strong class="font-semibold text-[#0077B6]">出題傾向の把握:</strong> 大阪府の公立高校入試の出題傾向に合わせた問題形式で、実戦的な対策が可能です。</li>
+                    <li><strong class="font-semibold text-[#0077B6]">出題傾向の把握:</b> 大阪府の公立高校入試の出題傾向に合わせた問題形式で、実戦的な対策が可能です。</li>
                     <li><strong class="font-semibold text-[#0077B6]">学力の定点観測:</strong> 定期的に受験することで、学力の伸びや苦手分野の変化を把握できます。特に夏以降のテストは重要です。</li>
                 </ul>
 
-                <h3 class="text-xl font-bold text-[#03045E] mb-3">2025年度 五ツ木模試 スケジュール</h3> <!-- Updated text -->
-                <p class="text-sm text-gray-600 mb-4">※以下は中学3年生対象の主要な回となります。正確な日程・会場は五ツ木書房の公式ウェブサイトで必ずご確認ください。</p> <!-- Updated note -->
+                <h3 class="text-xl font-bold text-[#03045E] mb-3">2025年度 五ツ木模試 スケジュール</h3>
+                <p class="text-sm text-gray-600 mb-4">※以下は中学3年生対象の主要な回となります。正確な日程・会場は五ツ木書房の公式ウェブサイトで必ずご確認ください。</p>
                 <div class="overflow-x-auto rounded-lg shadow-md">
                     <table class="w-full text-left border-collapse">
                         <thead>
