--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <div class="text-center text-3xl text-[#0077B6]">▼</div>
                     <div class="p-4 bg-gray-50 rounded-lg shadow-sm">
                         <h3 class="font-bold text-lg text-[#03045E] mb-2">4. 最終的な内申点の調整（450点満点）</h3>
-                        <p class="math-text">合否判定に用いられる際、内申点は学力検査の満点（5教科 $\times$ 90点 = 450点）に合わせる形で調整されます。これにより、内申点の最終的な満点も学力検査と同じ 450点 となります。</p>
+                        <p class="math-text">合否判定に用いられる際、内申点は学力検査の満点（5教科 × 90点 = 450点）に合わせる形で調整されます。これにより、内申点の最終的な満点も学力検査と同じ 450点 となります。</p>
                         <p class="math-text mt-2 font-semibold">最終内申点満点: 450点</p>
                     </div>
                     <div class="text-center text-3xl text-[#0077B6]">▼</div>
@@ -720,7 +720,7 @@
                                 <li><strong>複雑な文</strong>: 間接疑問文、現在完了進行形、仮定法 (★★★★★)</li>
                                 <li><strong>付加疑問文</strong>: 肯定文・否定文への付加疑問 (★★★★☆)</li>
                                 <li><strong>話法</strong>: 間接話法 (★★★★☆)</li>
-                                <li><strong>動詞の形</strong>: 原型不定詞、不定詞の応用 (too ~ to..., ~ enough to...) (★★★★☆)</li>
+                                <li><strong>動詞の形:</strong> 原型不定詞、不定詞の応用 (too ~ to..., ~ enough to...) (★★★★☆)</li>
                             </ul>
                         </div>
                     </div>
