--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="mt-6 p-4 bg-amber-100 border-l-4 border-amber-500 text-amber-800 rounded-lg">
+                    <p class="font-bold">注記：上記の情報は概算であり、時間帯や交通状況によって変動します。正確な情報や最新のアクセス方法は、各学校の公式ウェブサイトや交通機関の時刻表でご確認ください。</p>
+                </div>
             </div>
         </section>
         
@@ -444,55 +447,12 @@
                                 <td class="p-3">バス (JR高槻駅北側より約20分) または自転車 (約25分)。<br>合計: 約20～25分</td>
                             </tr>
                             <tr class="hover:bg-gray-50 bg-gray-100">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">大阪府立島本高等学校</td>
-                                <td class="p-3">〒618-0023 大阪府三島郡島本町桜井台15-1</td>
-                                <td class="p-3">JR島本駅まで電車 (約3分)、その後徒歩 (約15分) または自転車 (約5分)。<br>合計: 約20～25分</td>
-                            </tr>
-                            <!-- 私立高校のデータ -->
-                            <tr class="hover:bg-gray-50">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">関西大学高等部</td>
-                                <td class="p-3">〒569-1098 大阪府高槻市白梅町7番1号</td>
-                                <td class="p-3">徒歩 (約7分)。<br>合計: 約7分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50 bg-gray-100">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">高槻高等学校</td>
-                                <td class="p-3">〒569-8505 大阪府高槻市沢良木町2-5</td>
-                                <td class="p-3">徒歩 (約10分)。<br>合計: 約10分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">大阪青凌高等学校</td>
-                                <td class="p-3">〒618-8502 大阪府三島郡島本町若山台一丁目一番一号</td>
-                                <td class="p-3">JR島本駅まで電車 (約3分)、その後バス (約10分)。<br>合計: 約15～20分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50 bg-gray-100">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">金光大阪高等学校</td>
-                                <td class="p-3">〒569-0002 大阪府高槻市東上牧1丁目3番1号</td>
-                                <td class="p-3">JR摂津富田駅まで電車 (約3分)、その後徒歩 (約15分) またはバス (約5分)。<br>合計: 約10～20分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">大阪学院大学高等学校</td>
-                                <td class="p-3">〒564-0011 大阪府吹田市岸部南二丁目6-1</td>
-                                <td class="p-3">JR岸辺駅まで電車 (約15分)、その後徒歩 (約10分)。<br>合計: 約25分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50 bg-gray-100">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">常翔学園高等学校</td>
-                                <td class="p-3">〒535-8585 大阪市旭区大宮5-16-1</td>
-                                <td class="p-3">JR大阪駅まで電車 (約20分)、その後バス (約10分) または地下鉄 (約10分)。<br>合計: 約40分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">早稲田大阪高等学校</td>
-                                <td class="p-3">〒567-0051 大阪府茨木市宿久庄7丁目20-1</td>
-                                <td class="p-3">JR茨木駅まで電車 (約5分)、その後バス (約15分)。<br>合計: 約25分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50 bg-gray-100">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">京都橘高等学校</td>
-                                <td class="p-3">〒612-8026 京都府京都市伏見区桃山町伊賀50</td>
-                                <td class="p-3">JR京都駅まで電車 (約25分)、その後バス (約15分)。<br>合計: 約45分</td>
-                            </tr>
-                            <tr class="hover:bg-gray-50">
-                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">龍谷大学付属平安高等学校</td>
-                                <td class="p-3">〒600-8267 京都府京都市下京区御器屋町30</td>
-                                <td class="p-3">JR京都駅まで電車 (約25分)、その後徒歩 (約10分) またはバス (約5分)。<br>合計: 約30～35分</td>
+                                <td class="p-3 font-bold text-[#03045E] whitespace-nowrap">島本</td>
+                                <td class="p-3">B</td>
+                                <td class="p-3">B</td>
+                                <td class="p-3">B</td>
+                                <td class="p-3">Ⅱ型 (6:4)</td>
+                                <td class="p-3">情報なし</td>
                             </tr>
                         </tbody>
                     </table>
@@ -839,7 +799,7 @@
                                 <li><strong>時制:</strong> 未来形 (be going to/will)、現在完了形 (継続・経験・完了) (★★★★★)</li>
                                 <li><strong>助動詞:</strong> must, should, have to, may, might, could (★★★★☆)</li>
                                 <li><strong>動詞の形:</strong> 不定詞 (名詞・形容詞・副詞的用法)、動名詞 (★★★★★)</li>
-                                <li><strong>受動態:</strong> be動詞 + 過去分詞、byを使った表現 (★★★★★)</li>
+                                <li><strong>受動態:</b> be動詞 + 過去分詞、byを使った表現 (★★★★★)</li>
                                 <li><strong>接続詞:</strong> 時・条件・理由・目的を表す接続詞 (★★★★☆)</li>
                             </ul>
                             <button id="btn-eigo-grade2" class="mt-4 bg-[#00B4D8] hover:bg-[#0077B6] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out text-sm" onclick="generateStudyTips('英語', '中学2年生', 'btn-eigo-grade2', 'tips-eigo-grade2')">
@@ -1595,7 +1555,10 @@
                 };
 
                 // ここにAPIキーを設定してください！
-                const apiKey = "AIzaSyDUY1BRnfFfoTaNYTeRtdsBI-oBEp1yRfw"; // <-- ここを置き換えてください！
+                // IMPORTANT: Go to Google Cloud Console, enable the Gemini API,
+                // and create an API key for your project. Replace "YOUR_API_KEY_HERE"
+                // with your actual API key.
+                const apiKey = "AIzaSyCfV4iN_Gdgz6a_iwK19nc5UuRILU1ny6I"; // <-- ここにご自身のAPIキーを貼り付けてください！
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                 const response = await fetch(apiUrl, {
@@ -1722,7 +1685,10 @@
                 };
 
                 // ここにAPIキーを設定してください！
-                const apiKey = "YOUR_API_KEY_HERE"; // <-- ここを置き換えてください！
+                // IMPORTANT: Go to Google Cloud Console, enable the Gemini API,
+                // and create an API key for your project. Replace "YOUR_API_KEY_HERE"
+                // with your actual API key.
+                const apiKey = "AIzaSyCfV4iN_Gdgz6a_iwK19nc5UuRILU1ny6I"; // <-- ここにご自身のAPIキーを貼り付けてください！
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
 
                 const response = await fetch(apiUrl, {
