--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                         <td class="p-3">270点</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50 bg-gray-100">
-                                        <td class="p-3 font-bold text-[#03045E]">Ⅱ型</td>
+                                        <td class="p-3">Ⅱ型</td>
                                         <td class="p-3">6：4</td>
                                         <td class="p-3">360点</td>
                                     </tr>
@@ -632,8 +632,8 @@
                                     <ul class="list-disc list-inside text-sm">
                                         <li><strong class="font-semibold text-[#0077B6]">専門的な対策:</strong> 塾でのC問題対策講座や難易度の高い問題集の活用。</li>
                                         <li><strong class="font-semibold text-[#0077B6]">記述力強化:</b> 国語・英語の記述問題、英作文で高得点を目指すための添削指導。</li>
-                                        <li><strong class="font-semibold text-[#0077B6]">速読・多読:</b> 長文に慣れ、素早く正確に情報を読み取る練習。</li>
-                                        <li><strong class="font-semibold text-[#0077B6]">得点戦略:</b> 満点を目指すのではなく、取れる問題を確実に取る戦略が重要。</li>
+                                        <li><strong class="font-semibold text-[#0077B6]">速読・多読:</strong> 長文に慣れ、素早く正確に情報を読み取る練習。</li>
+                                        <li><strong class="font-semibold text-[#0077B6]">得点戦略:</strong> 満点を目指すのではなく、取れる問題を確実に取る戦略が重要。</li>
                                     </ul>
                                 </td>
                             </tr>
@@ -682,228 +682,10 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-        </section>
-
-        <!-- 主要5科目 単元概要セクション -->
-        <section id="curriculum-overview" class="mb-12 scroll-mt-[6.5rem]">
-            <div class="card p-6 md:p-8">
-                <h2 class="text-2xl font-bold section-title pb-2 mb-4">主要5科目 単元概要</h2>
-                <p class="text-base md:text-lg mb-6">ここでは、中学校で学習する主要5科目（国語、数学、理科、社会、英語）の主要な単元を学年別にまとめています。各単元の内容と公立高校入試における重要度（★☆☆☆☆：低 〜 ★★★★★：高）を参考に、学習計画を立てましょう。</p>
-                
-                <div class="flex flex-wrap justify-center border-b border-gray-200 mb-4">
-                    <button class="tab-button py-2 px-4 text-lg focus:outline-none" onclick="openGrade(event, 'grade1')">中学1年生</button>
-                    <button class="tab-button py-2 px-4 text-lg focus:outline-none" onclick="openGrade(event, 'grade2')">中学2年生</button>
-                    <button class="tab-button py-2 px-4 text-lg focus:outline-none" onclick="openGrade(event, 'grade3')">中学3年生</button>
-                </div>
-
-                <!-- 中学1年生の単元内容 -->
-                <div id="grade1" class="tab-content">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">国語 (中学1年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>説明的文章の読解</strong>: 論理の把握、要点理解 (★★★☆☆)</li>
-                                <li><strong>文学的文章の読解</strong>: 登場人物の心情、表現技法 (★★★★☆)</li>
-                                <li><strong>漢字・語句</strong>: 読み書き、意味 (★★★★☆)</li>
-                                <li><strong>文法</strong>: 品詞、文の成分 (★★★☆☆)</li>
-                                <li><strong>作文</strong>: 構成、表現 (★★★☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">数学 (中学1年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 計算</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>正の数・負の数</strong>: 加減乗除、四則計算、指数 (★★★★☆)</li>
-                                <li><strong>文字と式</strong>: 文字式の計算、式の値、数量の関係を式で表現 (★★★★☆)</li>
-                                <li><strong>方程式</strong>: 一次方程式の解き方、応用問題 (★★★★☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ グラフ</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>比例と反比例</strong>: 概念、グラフ、式、活用 (★★★★☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 図形</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>平面図形</strong>: 作図、対称移動、多角形 (★★★☆☆)</li>
-                                <li><strong>空間図形</strong>: 立体の見方、表面積、体積 (★★★☆☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ その他</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>資料の活用</strong>: 度数分布表、ヒストグラム、代表値 (★★☆☆☆)</li>
-                            </ul>
-                        </div>
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">理科 (中学1年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>植物の生活と種類</strong>: 光合成、分類 (★★★☆☆)</li>
-                                <li><strong>身の回りの物質</strong>: 状態変化、密度、気体の性質 (★★★☆☆)</li>
-                                <li><strong>光・音・力</strong>: 光の屈折・反射、音の伝わり方、圧力 (★★★☆☆)</li>
-                                <li><strong>大地の変化</strong>: 地震、火山、岩石 (★★☆☆☆)</li>
-                                <li><strong>身近な生物の観察</strong>: 顕微鏡、スケッチ (★★☆☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">社会 (中学1年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 地理</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>世界の様々な地域</strong>: 気候、地形、産業、文化 (★★★☆☆)</li>
-                                <li><strong>日本の様々な地域</strong>: 地形、産業、人口 (★★★☆☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 歴史</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>古代文明と日本</strong>: 旧石器～古墳時代 (★★☆☆☆)</li>
-                                <li><strong>飛鳥・奈良・平安時代</strong>: 律令国家、平安文化 (★★★☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">英語 (中学1年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>基本動詞</strong>: be動詞・一般動詞の現在形、過去形 (★★★★★)</li>
-                                <li><strong>文の種類</strong>: 肯定文・否定文・疑問文、命令文、There is/are (★★★★☆)</li>
-                                <li><strong>助動詞</strong>: can (能力・許可) (★★★★☆)</li>
-                                <li><strong>時制</strong>: 現在進行形 (★★★★☆)</li>
-                                <li><strong>基本語彙・表現</strong>: アルファベット、あいさつ、自己紹介、簡単な疑問詞 (★★★★☆)</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 中学2年生の単元内容 -->
-                <div id="grade2" class="tab-content">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">国語 (中学2年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>説明的文章の読解</strong>: 筆者の主張、根拠 (★★★★☆)</li>
-                                <li><strong>文学的文章の読解</strong>: 情景描写、心情変化 (★★★★☆)</li>
-                                <li><strong>古典</strong>: 古文・漢文の基礎 (★★★☆☆)</li>
-                                <li><strong>漢字・語句</strong>: 読み書き、意味 (★★★★☆)</li>
-                                <li><strong>文法</strong>: 動詞・形容詞の活用、助動詞・助詞 (★★★☆☆)</li>
-                                <li><strong>作文</strong>: 意見文、構成 (★★★☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">数学 (中学2年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 計算</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>式の計算</strong>: 多項式の加減乗除、分配法則、指数法則 (★★★★★)</li>
-                                <li><strong>連立方程式</strong>: 解き方（加減法・代入法）、応用問題 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ グラフ</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>一次関数</strong>: グラフ、変化の割合、式、応用問題 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 図形</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>図形の性質と合同</strong>: 平行線、多角形、合同条件、証明 (★★★★★)</li>
-                                <li><strong>平行と合同</strong>: 四角形の性質、中点連結定理 (★★★★☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ その他</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>確率</strong>: 確率の求め方、場合の数、独立試行 (★★★★☆)</li>
-                                <li><strong>データの活用</strong>: 累積度数、箱ひげ図、四分位数 (★★☆☆☆)</li>
-                            </ul>
-                        </div>
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">理科 (中学2年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>化学変化と原子・分子</strong>: 物質の分解・化合、原子・分子、化学式、化学反応式 (★★★★☆)</li>
-                                <li><strong>電流と回路</strong>: オームの法則、電力、電磁誘導 (★★★★☆)</li>
-                                <li><strong>動物の生活と細胞</strong>: 消化、呼吸、循環、排出、細胞 (★★★☆☆)</li>
-                                <li><strong>気象</strong>: 気圧、風、雲、天気 (★★★☆☆)</li>
-                                <li><strong>地震と火山</strong>: 地震の揺れ、火山活動 (★★★☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">社会 (中学2年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 地理</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>世界と日本の地域差</strong>: 産業構造、貿易、交通 (★★★★☆)</li>
-                                <li><strong>世界の諸問題</strong>: 環境問題、貧困、紛争 (★★★☆☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 歴史</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>中世の日本</strong>: 武士の時代、室町文化 (★★★★☆)</li>
-                                <li><strong>近世の日本</strong>: 江戸幕府、開国 (★★★★☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">英語 (中学2年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>比較</strong>: 比較級・最上級、as ~ as (★★★★★)</li>
-                                <li><strong>時制:</strong> 未来形 (be going to/will)、現在完了形 (継続・経験・完了) (★★★★★)</li>
-                                <li><strong>助動詞:</strong> must, should, have to, may, might, could (★★★★☆)</li>
-                                <li><strong>動詞の形:</strong> 不定詞 (名詞・形容詞・副詞的用法)、動名詞 (★★★★★)</li>
-                                <li><strong>受動態:</b> be動詞 + 過去分詞、byを使った表現 (★★★★★)</li>
-                                <li><strong>接続詞:</b> 時・条件・理由・目的を表す接続詞 (★★★★☆)</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- 中学3年生の単元内容 -->
-                <div id="grade3" class="tab-content">
-                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">国語 (中学3年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>説明的文章の読解</strong>: 批評文、論説文、要約 (★★★★☆)</li>
-                                <li><strong>文学的文章の読解</strong>: 詩、短歌、俳句、小説 (★★★★☆)</li>
-                                <li><strong>古典</strong>: 古文・漢文の発展 (★★★★☆)</li>
-                                <li><strong>漢字・語句</strong>: 難易度高めの熟語、慣用句 (★★★★☆)</li>
-                                <li><strong>作文</strong>: 小論文、意見主張 (★★★★★)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">数学 (中学3年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 計算</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>多項式</strong>: 乗法公式、因数分解 (★★★★★)</li>
-                                <li><strong>平方根</strong>: 計算、有理化、近似値 (★★★★★)</li>
-                                <li><strong>二次方程式</strong>: 解き方（解の公式、因数分解）、応用問題 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ グラフ</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>二次関数</strong>: $y=ax^2$のグラフ、変域、変化の割合、応用問題 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 図形</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>図形の相似</strong>: 相似条件、相似比、面積比、体積比、平行線と線分の比 (★★★★★)</li>
-                                <li><strong>円の性質</strong>: 円周角の定理、接線 (★★★★★)</li>
-                                <li><strong>三平方の定理</strong>: 辺の長さ、座標、空間図形への応用 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ その他</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>標本調査</strong>: 概念、無作為抽出 (★★★☆☆)</li>
-                            </ul>
-                        </div>
-                        <div class="bg-blue-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2">理科 (中学3年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>細胞と生殖</strong>: 細胞分裂、遺伝、生物の多様性 (★★★★☆)</li>
-                                <li><strong>力の働きと運動</strong>: 運動の法則、仕事、エネルギー保存 (★★★★☆)</li>
-                                <li><strong>化学変化とイオン</strong>: 酸・アルカリ、中和、電池、電気分解 (★★★★★)</li>
-                                <li><strong>地球と宇宙</strong>: 天体の動き、太陽系、恒星 (★★★★☆)</li>
-                                <li><strong>生命の連続性</strong>: 生態系、環境保全 (★★★☆☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">社会 (中学3年生)</h3>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 地理</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>地理総合</strong>: 地域の特色、世界の諸地域（現代の課題と関連） (★★★★☆)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 歴史</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>近代の日本</strong>: 明治維新、帝国主義、日清・日露戦争 (★★★★★)</li>
-                                <li><strong>現代の日本と世界</strong>: 第一次・第二次世界大戦、戦後、国際社会 (★★★★★)</li>
-                            </ul>
-                            <h4 class="font-semibold text-[#0077B6] mt-3">■ 公民</h4>
-                            <ul class="list-disc list-inside text-sm space-y-1 ml-4">
-                                <li><strong>私たちと社会生活</strong>: 社会集団、きまり、規範 (★★☆☆☆)</li>
-                                <li><strong>日本の政治</strong>: 憲法、国会、内閣、裁判所 (★★★☆☆)</li>
-                                <li><strong>経済</strong>: 経済の仕組み、市場経済、財政 (★★★★☆)</li>
-                                <li><strong>国際社会</strong>: 国際連合、国際協力、地球市民 (★★★★☆)</li>
-                            </ul>
-                            <h3 class="text-xl font-bold text-[#03045E] mb-2 mt-4">英語 (中学3年生)</h3>
-                            <ul class="list-disc list-inside text-sm space-y-1">
-                                <li><strong>修飾</strong>: 分詞の形容詞的用法、関係代名詞 (★★★★★)</li>
-                                <li><strong>複雑な文</strong>: 間接疑問文、現在完了進行形、仮定法 (★★★★★)</li>
-                                <li><strong>付加疑問文</strong>: 肯定文・否定文への付加疑問 (★★★★☆)</li>
-                                <li><strong>話法</strong>: 間接話法 (★★★★☆)</li>
-                                <li><strong>動詞の形:</strong> 原型不定詞、不定詞の応用 (too ~ to..., ~ enough to...) (★★★★☆)</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
                 <!-- 追加リンク -->
                 <div class="mt-6 text-center">
                     <p class="text-base text-gray-700">さらに詳しい科目情報はこちらで確認できます:</p>
-                    <a href="https://kyomujunior.netlify.app/" target="_blank" rel="noopener noreferrer" class="inline-block bg-[#0077B6] hover:bg-[#00B4D8] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out mt-2">
+                    <a href="https://keikou.netlify.app/" target="_blank" rel="noopener noreferrer" class="inline-block bg-[#0077B6] hover:bg-[#00B4D8] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out mt-2">
                         詳細な科目情報を見る
                     </a>
                 </div>
@@ -941,7 +723,7 @@
                     </div>
                 </div>
                 <div class="mt-6 text-center p-4 bg-amber-100 border-l-4 border-amber-500 text-amber-800 rounded-lg">
-                    <p class="font-bold">注意：自己申告書や外部英語資格の証明書など、別途郵送が必要な書類がある場合は、期日までに必ず郵送してください。詳細は各選抜の要項で確認が必要です。<br>上記の日程は目安であり、年度によって変動します。必ず最新の入試要項をご確認ください。</p>
+                    <p class="font-bold">注意：自己申告書や外部英語資格の証明書など、別途郵送が必要な書類がある場合は、期日までに必ず郵送してください。<br>上記の日程は目安であり、年度によって変動します。必ず最新の入試要項をご確認ください。</p>
                 </div>
             </div>
         </section>
@@ -1504,7 +1286,11 @@
         // ページロード時に最初のタブをアクティブにする
         document.addEventListener('DOMContentLoaded', (event) => {
             // 初期表示として中学1年生のタブをアクティブにする
-            document.querySelector('.tab-button').click();
+            const firstTabButton = document.querySelector('.tab-button');
+            if (firstTabButton) { // firstTabButtonがnullでないことを確認
+                firstTabButton.click();
+            }
+
 
             // Mobile navigation toggle
             const navToggle = document.getElementById('nav-toggle');
