--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <div class="mt-6 text-center">
                     <p class="text-base text-gray-700">各高校の詳しい情報はこちらで確認できます:</p>
                     <a href="https://takatsukihigh.netlify.app/" target="_blank" rel="noopener noreferrer" class="inline-block bg-[#0077B6] hover:bg-[#00B4D8] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out mt-2">
-                        高槻高校情報サイトへ
+                        高槻エリア高校情報サイトへ
                     </a>
                 </div>
             </div>
@@ -681,7 +681,7 @@
                 <!-- 追加リンク -->
                 <div class="mt-6 text-center">
                     <p class="text-base text-gray-700">さらに詳しい情報はこちらで確認できます:</p>
-                    <a href="https://kyomujunior.netlify.app/" target="_blank" rel="noopener noreferrer" class="inline-block bg-[#0077B6] hover:bg-[#00B4D8] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out mt-2">
+                    <a href="https://keikou.netlify.app/" target="_blank" rel="noopener noreferrer" class="inline-block bg-[#0077B6] hover:bg-[#00B4D8] text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out mt-2">
                         関連サイトへ
                     </a>
                 </div>
